safari overflow bug

--- a/demo_site_1/style.css
+++ b/demo_site_1/style.css
@@ -143,6 +143,9 @@ a:hover {
     z-index: 5;
     padding: 1rem;
     padding-right: 0;
+    overflow-x: clip;
+    overflow-y: visible;
+    -webkit-overflow-scrolling: touch;
 }
 
 .header {
@@ -152,6 +155,13 @@ a:hover {
     width: 100%;
     position: relative;
     overflow-x: clip;
+    overflow-y: visible;
+    -webkit-overflow-scrolling: touch;
+}
+
+.header > * {
+    overflow-y: visible;
+    -webkit-overflow-scrolling: touch;
 }
 
 .fixed-header {
